# advance-rag-system

./: .gitignore  Makefile  QUICKSTART.md  README.md  RUNNING.md  __init__.py  docker-compose.test.yml  env.example  run_server.py  setup.sh
backend/: MANIFEST.in  __init__.py  constants.py  db.py  dependencies.py  env.py  model_registry.py  pyproject.toml  settings.py  storage.py
backend/models/: knowledge.py
backend/retrieval/: utils.py
backend/retrieval/loaders/: external_document.py  main.py  mistral.py
backend/retrieval/models/: colbert.py  external.py
backend/retrieval/vector/: factory.py
backend/retrieval/vector/dbs/: chroma.py  elasticsearch.py  milvus.py  milvus_multitenancy.py  opengauss.py  opensearch.py  oracle23ai.py  pgvector.py  pinecone.py  qdrant.py  qdrant_multitenancy.py  s3vector.py  weaviate.py
backend/retrieval/web/: azure.py  bing.py  bocha.py  brave.py  duckduckgo.py  exa.py  external.py  firecrawl.py  google_pse.py  jina_search.py  kagi.py  main.py  mojeek.py  ollama.py  perplexity.py  perplexity_search.py  searchapi.py  searxng.py  serpapi.py  serper.py  serply.py  serpstack.py  sougou.py  tavily.py  utils.py  yacy.py
backend/routers/: knowledge.py  retrieval.py
backend/utils/: __init__.py  misc.py  text.py
backend/utils/db/: __init__.py
frontend/: index.d.ts  index.js  package.json
frontend/components/admin/Settings/: Documents.svelte
frontend/components/workspace/: Knowledge.svelte
tests/: check_rag_isolation.py  wait_for_ollama.py
tests/integration/: test_rag_full_system.py
tests/support/: app.py  db.py  models.py
(+4 files in other folders)
